--- a/translations/lang_it.xml
+++ b/translations/lang_it.xml
@@ -141,10 +141,10 @@
 		<text name="input_FAVOR_MENU" text="Menu favori" />
 		<text name="input_NPC_LIST" text="Lista NPC" />
 			<text name="npc_schedule_plans" text="I miei piani:" />
-		<text name="input_HUD_EDIT_MODE" text="Modifica HUD" />
-		<text name="npc_hud_drag_hint" text="Trascina per spostare" />
+		<text name="input_HUD_EDIT_MODE" text="Attiva/disattiva modifica HUD" />
+		<text name="npc_hud_drag_hint" text="Trascina per spostare | Angoli per ridimensionare" />
 		<text name="npc_hud_locked_short" text="Blocca HUD favori" />
-		<text name="npc_hud_locked_long" text="Quando bloccato, la lista favori non può essere spostata con F8" />
+		<text name="npc_hud_locked_long" text="Quando bloccato, la lista favori non può essere spostata o ridimensionata" />
 		<text name="npc_hud_scale_short" text="Dimensione HUD favori" />
 		<text name="npc_hud_scale_long" text="Dimensione della lista favori attivi sullo schermo" />
 		<text name="npc_admin_title" text="Pannello Admin NPC" />
@@ -158,6 +158,19 @@
 		<text name="npc_admin_adjusted" text="Regolato: %s%d (ora %d/100)" />
 		<text name="npc_admin_back" text="Indietro" />
 		<text name="npc_admin_edit" text="Modifica" />
+		<text name="npc_hud_compass_n" text="N" />
+		<text name="npc_hud_compass_ne" text="NE" />
+		<text name="npc_hud_compass_e" text="E" />
+		<text name="npc_hud_compass_se" text="SE" />
+		<text name="npc_hud_compass_s" text="S" />
+		<text name="npc_hud_compass_sw" text="SO" />
+		<text name="npc_hud_compass_w" text="O" />
+		<text name="npc_hud_compass_nw" text="NO" />
+		<text name="npc_hud_new_favor" text="Nuovo: %s ha bisogno di aiuto!" />
+		<text name="npc_hud_completed" text="Completato: %s" />
+		<text name="npc_hud_failed" text="Fallito: %s" />
+		<text name="npc_hud_cancelled" text="Annullato: %s" />
+		<text name="npc_hud_perfect" text="Perfetto! %s bonus!" />
 		<text name="npc_admin_col_personality" text="Personalità" />
 	</texts>
 </l10n>
