--- a/translations/lang_pl.xml
+++ b/translations/lang_pl.xml
@@ -141,10 +141,10 @@
 		<text name="input_FAVOR_MENU" text="Menu przysług" />
 		<text name="input_NPC_LIST" text="Lista NPC" />
 			<text name="npc_schedule_plans" text="Moje plany:" />
-		<text name="input_HUD_EDIT_MODE" text="Edytuj HUD" />
-		<text name="npc_hud_drag_hint" text="Przeciągnij, aby przesunąć" />
+		<text name="input_HUD_EDIT_MODE" text="Przełącz edycję HUD" />
+		<text name="npc_hud_drag_hint" text="Przeciągnij, aby przesunąć | Rogi, aby skalować" />
 		<text name="npc_hud_locked_short" text="Zablokuj HUD przysług" />
-		<text name="npc_hud_locked_long" text="Gdy zablokowany, lista przysług nie może być przesuwana klawiszem F8" />
+		<text name="npc_hud_locked_long" text="Gdy zablokowany, lista przysług nie może być przesuwana ani skalowana" />
 		<text name="npc_hud_scale_short" text="Rozmiar HUD przysług" />
 		<text name="npc_hud_scale_long" text="Rozmiar listy aktywnych przysług na ekranie" />
 		<text name="npc_admin_title" text="Panel admina NPC" />
@@ -158,6 +158,19 @@
 		<text name="npc_admin_adjusted" text="Dostosowano: %s%d (teraz %d/100)" />
 		<text name="npc_admin_back" text="Wstecz" />
 		<text name="npc_admin_edit" text="Edytuj" />
+		<text name="npc_hud_compass_n" text="Pn" />
+		<text name="npc_hud_compass_ne" text="PnW" />
+		<text name="npc_hud_compass_e" text="W" />
+		<text name="npc_hud_compass_se" text="PdW" />
+		<text name="npc_hud_compass_s" text="Pd" />
+		<text name="npc_hud_compass_sw" text="PdZ" />
+		<text name="npc_hud_compass_w" text="Z" />
+		<text name="npc_hud_compass_nw" text="PnZ" />
+		<text name="npc_hud_new_favor" text="Nowe: %s potrzebuje pomocy!" />
+		<text name="npc_hud_completed" text="Gotowe: %s" />
+		<text name="npc_hud_failed" text="Nieudane: %s" />
+		<text name="npc_hud_cancelled" text="Anulowane: %s" />
+		<text name="npc_hud_perfect" text="Perfekcyjnie! %s bonus!" />
 		<text name="npc_admin_col_personality" text="Osobowość" />
 	</texts>
 </l10n>
