--- a/translations/lang_fr.xml
+++ b/translations/lang_fr.xml
@@ -141,10 +141,10 @@
 		<text name="input_FAVOR_MENU" text="Menu des faveurs" />
 		<text name="input_NPC_LIST" text="Liste PNJ" />
 			<text name="npc_schedule_plans" text="Mes projets :" />
-		<text name="input_HUD_EDIT_MODE" text="Modifier le HUD" />
-		<text name="npc_hud_drag_hint" text="Glisser pour déplacer" />
+		<text name="input_HUD_EDIT_MODE" text="Basculer édition HUD" />
+		<text name="npc_hud_drag_hint" text="Glisser pour déplacer | Coins pour redimensionner" />
 		<text name="npc_hud_locked_short" text="Verrouiller le HUD" />
-		<text name="npc_hud_locked_long" text="Quand verrouillé, la liste des faveurs ne peut pas être déplacée avec F8" />
+		<text name="npc_hud_locked_long" text="Quand verrouillé, la liste des faveurs ne peut pas être déplacée ou redimensionnée" />
 		<text name="npc_hud_scale_short" text="Taille du HUD" />
 		<text name="npc_hud_scale_long" text="Taille de la liste des faveurs actives à l'écran" />
 		<text name="npc_admin_title" text="Panneau Admin PNJ" />
@@ -158,6 +158,19 @@
 		<text name="npc_admin_adjusted" text="Ajusté: %s%d (maintenant %d/100)" />
 		<text name="npc_admin_back" text="Retour" />
 		<text name="npc_admin_edit" text="Modifier" />
+		<text name="npc_hud_compass_n" text="N" />
+		<text name="npc_hud_compass_ne" text="NE" />
+		<text name="npc_hud_compass_e" text="E" />
+		<text name="npc_hud_compass_se" text="SE" />
+		<text name="npc_hud_compass_s" text="S" />
+		<text name="npc_hud_compass_sw" text="SO" />
+		<text name="npc_hud_compass_w" text="O" />
+		<text name="npc_hud_compass_nw" text="NO" />
+		<text name="npc_hud_new_favor" text="Nouveau: %s a besoin d'aide!" />
+		<text name="npc_hud_completed" text="Terminé: %s" />
+		<text name="npc_hud_failed" text="Échoué: %s" />
+		<text name="npc_hud_cancelled" text="Annulé: %s" />
+		<text name="npc_hud_perfect" text="Parfait! %s bonus!" />
 		<text name="npc_admin_col_personality" text="Personnalité" />
 	</texts>
 </l10n>
