--- a/translations/lang_ru.xml
+++ b/translations/lang_ru.xml
@@ -141,10 +141,10 @@
 		<text name="input_FAVOR_MENU" text="Меню услуг" />
 		<text name="input_NPC_LIST" text="Список NPC" />
 			<text name="npc_schedule_plans" text="Мои планы:" />
-		<text name="input_HUD_EDIT_MODE" text="Редактировать HUD" />
-		<text name="npc_hud_drag_hint" text="Перетащите для перемещения" />
+		<text name="input_HUD_EDIT_MODE" text="Переключить редактирование HUD" />
+		<text name="npc_hud_drag_hint" text="Перетащите для перемещения | Углы для масштабирования" />
 		<text name="npc_hud_locked_short" text="Заблокировать HUD услуг" />
-		<text name="npc_hud_locked_long" text="Когда заблокировано, список услуг нельзя перемещать клавишей F8" />
+		<text name="npc_hud_locked_long" text="Когда заблокировано, список услуг нельзя перемещать или масштабировать" />
 		<text name="npc_hud_scale_short" text="Размер HUD услуг" />
 		<text name="npc_hud_scale_long" text="Размер списка активных услуг на экране" />
 		<text name="npc_admin_title" text="Админ-панель NPC" />
@@ -158,6 +158,19 @@
 		<text name="npc_admin_adjusted" text="Настроено: %s%d (сейчас %d/100)" />
 		<text name="npc_admin_back" text="Назад" />
 		<text name="npc_admin_edit" text="Ред." />
+		<text name="npc_hud_compass_n" text="С" />
+		<text name="npc_hud_compass_ne" text="СВ" />
+		<text name="npc_hud_compass_e" text="В" />
+		<text name="npc_hud_compass_se" text="ЮВ" />
+		<text name="npc_hud_compass_s" text="Ю" />
+		<text name="npc_hud_compass_sw" text="ЮЗ" />
+		<text name="npc_hud_compass_w" text="З" />
+		<text name="npc_hud_compass_nw" text="СЗ" />
+		<text name="npc_hud_new_favor" text="Новое: %s просит помощи!" />
+		<text name="npc_hud_completed" text="Выполнено: %s" />
+		<text name="npc_hud_failed" text="Провалено: %s" />
+		<text name="npc_hud_cancelled" text="Отменено: %s" />
+		<text name="npc_hud_perfect" text="Идеально! %s бонус!" />
 		<text name="npc_admin_col_personality" text="Личность" />
 	</texts>
 </l10n>
