--- a/translations/lang_uk.xml
+++ b/translations/lang_uk.xml
@@ -141,10 +141,10 @@
 		<text name="input_FAVOR_MENU" text="Меню послуг" />
 		<text name="input_NPC_LIST" text="Список NPC" />
 			<text name="npc_schedule_plans" text="Мої плани:" />
-		<text name="input_HUD_EDIT_MODE" text="Редагувати HUD" />
-		<text name="npc_hud_drag_hint" text="Перетягніть для переміщення" />
+		<text name="input_HUD_EDIT_MODE" text="Перемкнути редагування HUD" />
+		<text name="npc_hud_drag_hint" text="Перетягніть для переміщення | Кути для масштабування" />
 		<text name="npc_hud_locked_short" text="Заблокувати HUD послуг" />
-		<text name="npc_hud_locked_long" text="Коли заблоковано, список послуг не можна переміщувати клавішею F8" />
+		<text name="npc_hud_locked_long" text="Коли заблоковано, список послуг не можна переміщувати або масштабувати" />
 		<text name="npc_hud_scale_short" text="Розмір HUD послуг" />
 		<text name="npc_hud_scale_long" text="Розмір списку активних послуг на екрані" />
 		<text name="npc_admin_title" text="Адмін-панель NPC" />
@@ -158,6 +158,19 @@
 		<text name="npc_admin_adjusted" text="Налаштовано: %s%d (тепер %d/100)" />
 		<text name="npc_admin_back" text="Назад" />
 		<text name="npc_admin_edit" text="Редаг." />
+		<text name="npc_hud_compass_n" text="Пн" />
+		<text name="npc_hud_compass_ne" text="ПнСх" />
+		<text name="npc_hud_compass_e" text="Сх" />
+		<text name="npc_hud_compass_se" text="ПдСх" />
+		<text name="npc_hud_compass_s" text="Пд" />
+		<text name="npc_hud_compass_sw" text="ПдЗх" />
+		<text name="npc_hud_compass_w" text="Зх" />
+		<text name="npc_hud_compass_nw" text="ПнЗх" />
+		<text name="npc_hud_new_favor" text="Нове: %s потребує допомоги!" />
+		<text name="npc_hud_completed" text="Виконано: %s" />
+		<text name="npc_hud_failed" text="Провалено: %s" />
+		<text name="npc_hud_cancelled" text="Скасовано: %s" />
+		<text name="npc_hud_perfect" text="Ідеально! %s бонус!" />
 		<text name="npc_admin_col_personality" text="Особистість" />
 	</texts>
 </l10n>
